codepkg/objects/County_Config__mdt.object
<CustomObject>
    <description>This metadata is created to configure the public groups with respect to county and application</description>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Hardening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County_User_Approver_Queue_API_Name__c</fullName>
        <description>API name of the County User Approval Queue.</description>
        <inlineHelpText>API name of the County User Approval Queue.</inlineHelpText>
        <label>County User Approver Queue API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emails__c</fullName>
        <description>Email Addresses separated by comma(,) or semicolon(;)</description>
        <inlineHelpText>Email Addresses separated by comma(,) or semicolon(;)</inlineHelpText>
        <label>Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group_API_Name__c</fullName>
        <description>API name of public group</description>
        <inlineHelpText>API name of public group</inlineHelpText>
        <label>Public Group API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_API_Name__c</fullName>
        <description>API name of the Queue.</description>
        <inlineHelpText>API name of the Queue.</inlineHelpText>
        <label>County Manager Queue API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_NoReply_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show NoReply Email Address</label>
        <type>Checkbox</type>
    </fields>
    <label>County Config</label>
    <listViews>
        <fullName>HH_Application</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Application_Type__c</columns>
        <columns>Public_Group_API_Name__c</columns>
        <columns>Queue_API_Name__c</columns>
        <columns>County_User_Approver_Queue_API_Name__c</columns>
        <columns>Emails__c</columns>
        <columns>Show_NoReply_Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>HH Application</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>County Configs</pluralLabel>
</CustomObject>